# dryscope

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
benchmarks/: README.md  benchmark_paths.py  public_docs_labels.json  public_docs_repos.json  public_labels.json  public_repos.json  quality_report.md  run_public_benchmark.py  run_public_docs_benchmark.py  run_quality_report.py
docs/: analysis.md  architecture.md  dryscope-logo-image.md  dryscope-process-image.md  json-output.md  plan.md  roadmap.md  synthetic-examples.md
dryscope/: __init__.py  benchmark.py  cache.py  cli.py  config.py  embedder.py  help_topics.py  llm_backend.py  normalizer.py  parser.py  profiles.py  reporter.py  run_store.py  similarity.py  terminology.py  treesitter.py  unified_report.py  verifier.py
dryscope/code/: __init__.py  embedder.py  normalizer.py  parser.py  policy.py  profiles.py  reporter.py  treesitter.py  verifier.py
dryscope/docs/: __init__.py  chunker.py  coding.py  embeddings.py  models.py  pipeline.py  report.py  taxonomy.py  topics.py
dryscope/skill/: SKILL.md
tests/: test_benchmark.py  test_cache.py  test_cli.py  test_config.py  test_docs_chunker.py  test_docs_descriptors.py  test_docs_models.py  test_docs_pair_review.py  test_docs_pipeline.py  test_docs_report.py  test_docs_taxonomy.py  test_embedder.py  test_llm_backend.py  test_normalizer.py  test_parser.py  test_policy.py  test_run_store.py  test_similarity.py  test_unified_report.py  test_verifier.py
tests/fixtures/: sample.go  sample.java  sample.js  sample.ts  sample_a.py  sample_b.py
