[project]
name = "dryscope"
version = "0.1.0"
description = "Code duplicate detection using tree-sitter and embeddings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "click>=8.0",
]

[project.scripts]
dryscope = "dryscope.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
