[project]
name = "dryscope"
version = "0.1.0"
description = "Code duplicate detection using tree-sitter and embeddings"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Sankar" }]
keywords = ["duplicate", "clone", "detection", "tree-sitter", "embeddings", "DRY"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/sankar/dryscope"
Repository = "https://github.com/sankar/dryscope"

[project.scripts]
dryscope = "dryscope.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dryscope"]

[tool.hatch.build]
include = ["dryscope/**"]
