[project]
name = "dryscope"
version = "0.1.0"
description = "Code duplicate and documentation overlap detection"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Sankar" }]
keywords = ["duplicate", "clone", "detection", "tree-sitter", "embeddings", "DRY", "documentation", "overlap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-go>=0.25",
    "tree-sitter-typescript>=0.23",
    "numpy>=1.26",
    "click>=8.0",
    "rich>=13.0",
    "mistune>=3.0",
    "litellm>=1.0",
    "tenacity>=8.0",
    "tree-sitter-java>=0.23.5",
    "tomli>=2 ; python_full_version < '3.11'",
]

[project.optional-dependencies]
local-embeddings = ["sentence-transformers>=3.0"]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.15.12",
    "sentence-transformers>=3.0",
    "tomli>=2.4.0",
    "ty>=0.0.33",
    "xenon>=0.9.3",
]

[project.urls]
Homepage = "https://github.com/kvsankar/dryscope"
Repository = "https://github.com/kvsankar/dryscope"

[project.scripts]
dryscope = "dryscope.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dryscope"]

[tool.hatch.build]
include = ["dryscope/**"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".dryscope", "wheels"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "C90"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 60

[tool.ruff.lint.per-file-ignores]
"benchmarks/run_*.py" = ["E402"]
